# nemesis

./: Builds.md  Introduction.md  LICENSE.txt  Makefile.def  ProjectHome.md  Thumbs.db  autobuild.py  autogen.sh  bootstrap.sh  codeanalysis.py  configure.py  setup.py
trunk/: CHANGELOG.txt  LICENSE.txt  Makefile.am  Makefile.def  README  autobuild.py  bootstrap.sh  codeanalysis.py  configure.ac  configure.py  setup.py
trunk/bld/codelite/: nemesis.project  nemesis.workspace
trunk/bld/gcc/: configure.py
trunk/bld/msvc7.1/: nemesis.vcproj
trunk/bld/msvc9.0/: nemesis.sln  nemesis.vcproj  unit_tests.vcproj
trunk/dat/: excavation.slv
trunk/dat/bench/: cavity.slv  strip.slv  strip2.slv
trunk/dat/commands/: element.quad4b.slv  element.quad4e.slv  element.quad4i(1).slv  material.sdof.slv
trunk/dat/materials/: 1d.slv  MohrCoulomb[Shear].slv  MohrCoulomb[Triaxial].slv  Tresca.slv  UniCyclic.slv  UniGap.slv  dp.slv  mc.slv  springElastic.slv  visco.slv  vm.slv
trunk/dox/: footer.html
trunk/msc/: nemesis.cui  nemesis.nsi  sample.dxf
trunk/msc/lic/: license.python.txt
trunk/sci/: SciTEGlobal.properties  nemesis.api  nemesis.properties
trunk/src/[main]/: NemesisConfig.h  NemesisDebug.cpp  NemesisDebug.h  main.cpp
trunk/src/algorithm/: Algorithm.cpp  Algorithm.h  BFGS.cpp  BFGS.h  NewtonRaphsonFull.cpp  NewtonRaphsonFull.h  NewtonRaphsonInitial.cpp  NewtonRaphsonModified.cpp  NewtonRaphsonModified.h  algorithm.cc  algorithm.h  bfgs.cc  bfgs.h  bfgs.hh  linear_algorithm.cc  linear_algorithm.h  linear_algorithm.hh  newton_raphson_full.cc  newton_raphson_full.h  newton_raphson_initial.cc  newton_raphson_initial.h  newton_raphson_modified.cc  newton_raphson_modified.h
trunk/src/analysis/: Analysis.cpp  Analysis.h  AnalysisObject.cpp  AnalysisType.h  EigenAnalysis.cpp  SensitivityStaticAnalysis.cpp  SensitivityStaticAnalysis.h  StaticAnalysis.cpp  StaticAnalysis.h  TransientAnalysis.cpp  TransientAnalysis.h  XFemAnalysis.cpp  XFemAnalysis.h  analysis.cc  analysis.h  analysis_object.cc  analysis_object.h  analysis_type.cc  analysis_type.h  eigen_analysis.cc  eigen_analysis.h  sensitivity_static_analysis.cc  sensitivity_static_analysis.h  static_analysis.cc  static_analysis.h  transient_analysis.cc  transient_analysis.h  xfem_analysis.cc  xfem_analysis.h
trunk/src/constraints/: Constraint.cpp  Constraint.h  constraint.cc  constraint.h  constraint_test.cc
trunk/src/containers/: Containers.h  containers.h
trunk/src/control/: ArcLengthSpherical.cpp  ArcLengthSpherical.h  ArcLengthUNP.cpp  ArcLengthUNP.h  Control.cpp  Control.h  DisplacementControl.cpp  DisplacementControl.h  EigenControl.cpp  LoadControl.cpp  Newmark.h  SensitivityControl.cpp  SensitivityControl.h  StaticControl.cpp  StaticControl.h  TransientControl.h  arc_length_spherical.cc  arc_length_spherical.h  arc_length_unp.cc  arc_length_unp.h  control.cc  control.h  control.hh  displacement_control.cc  displacement_control.h  eigen_control.cc  eigen_control.h  load_control.cc  load_control.h  newmark.cc  newmark.h  sensitivity_control.cc  sensitivity_control.h  static_control.cc  static_control.h  transient_control.cc  transient_control.h
trunk/src/convergence/: ConvergenceNorm.h  convergence_norm.cc  convergence_norm.h  convergence_norm.hh
trunk/src/crack/: Crack.cpp  Crack.h  crack.cc  crack.h
trunk/src/crosssection/: CrossSection.cpp  CrossSection.h  cross_section.cc  cross_section.h
trunk/src/database/: Database.cpp  Database.h  Packet.cpp  SQLiteDatabase.cpp  database.cc  database.h  packet.cc  packet.h  packet.hh  packet_test.cc  sqlite_database.cc  sqlite_database.h
trunk/src/domain/: Domain.cpp  Domain.h  DomainObject.cpp  DomainObject.h  domain.cc  domain.h  domain_object.cc  domain_object.h
trunk/src/elements/: Bar.cpp  Bar.h  Bar2s.cpp  Bar2t.cpp  Bar2t.h  Beam2e.cpp  Brick8.cpp  Brick8.h  Brick8Disp.cpp  Brick8Disp.h  Brick8b.cpp  Brick8b.h  Brick8d.cpp  Brick8d.h  Brick8i.cpp  Brick8i.h  Element.cpp  Element.h  Quad4.cpp  Quad4.h  Quad4DispAxisymmetric.cpp  Quad4DispAxisymmetric.h  Quad4DispPlain.cpp  Quad4DispPlain.h  Quad4b.cpp  Quad4b.h  Quad4d.cpp  Quad4d.h  Quad4e.cpp  Quad4e.h  Quad4i.cpp  SDofElement.cpp  ShapeFunctions.cpp  ShapeFunctions.h  Spring.cpp  Spring.h  Tetrahedron4Disp.cpp  Tetrahedron4Disp.h  Timoshenko2d.cpp  Timoshenko2d.h  (+59 more)
trunk/src/exception/: SException.h  sexception.cc  sexception.h
trunk/src/feobject/: FEObject.cpp  FEObject.h  FEObjectTags.h  fe_object.cc  fe_object.h  fe_object_tags.h
trunk/src/group/: Group.cpp  Group.h  group.cc  group.h  group_data.h
trunk/src/imposer/: EliminationImposer.cpp  EliminationImposer.h  Imposer.cpp  LagrangeImposer.cpp  LagrangeImposer.h  PenaltyImposer.cpp  elimination_imposer.cc  elimination_imposer.h  elimination_imposer2.cc  elimination_imposer2.h  imposer.cc  imposer.h  lagrange_imposer.cc  lagrange_imposer.h  lagrange_imposer2.cc  lagrange_imposer2.h  penalty_imposer.cc  penalty_imposer.h  penalty_imposer2.cc  penalty_imposer2.h
trunk/src/loadcase/: ElementSensitivityParameter.h  ElementalLoad.cpp  ElementalLoad.h  GroundMotionFile.cpp  GroundMotionSin.cpp  GroundMotionSin.h  GroupState.cpp  GroupState.h  InitialCondition.cpp  InitialCondition.h  InitialDisplacement.cpp  InitialDisplacement.h  InitialStresses.cpp  InitialStresses.h  InitialVelocity.cpp  InitialVelocity.h  Load.cpp  Load.h  LoadCase.h  NodalLoad.cpp  NodalLoad.h  NodalLoadConstant.cpp  NodalLoadConstant.h  NodalLoadLinear.cpp  NodalLoadLinear.h  NodalLoadSin.cpp  element_sensitivity_parameter.cc  element_sensitivity_parameter.h  elemental_load.cc  elemental_load.h  ground_motion_file.cc  ground_motion_file.h  ground_motion_sin.cc  ground_motion_sin.h  group_data.h  group_state.cc  group_state.h  initial_condition.cc  initial_condition.h  initial_displacement.cc  (+19 more)
trunk/src/main/: NemesisDebug.cpp  NemesisDebug.h  base.h  main.cc  main.cpp  main_test.cc  nemesis_config.h  nemesis_debug.cc  nemesis_debug.h
trunk/src/material/: Creep.cpp  Creep.h  DP_in.cpp  DP_in.h  DP_out.cpp  DP_out.h  DruckerPrager.cpp  DruckerPrager.h  DuncanChang.cpp  MC.cpp  (+157 more)
(+1073 files in other folders)
