AM_CPPFLAGS = -Isrc \
	-I/opt/acml4.4.0/gfortran64_mp/include \
	-I/usr/include \
	-I/usr/include/python2.6 \
	-I/usr/include/boost

bin_PROGRAMS = nemesis 
nemesis_SOURCES = \
	src/algorithm/algorithm.cc \
	src/algorithm/algorithm.h \
	src/algorithm/bfgs.cc \
	src/algorithm/bfgs.h \
	src/algorithm/linear_algorithm.cc \
	src/algorithm/linear_algorithm.h \
	src/algorithm/newton_raphson_full.cc \
	src/algorithm/newton_raphson_full.h \
	src/algorithm/newton_raphson_initial.cc \
	src/algorithm/newton_raphson_initial.h \
	src/algorithm/newton_raphson_modified.cc \
	src/algorithm/newton_raphson_modified.h \
	src/analysis/analysis.cc \
	src/analysis/analysis.h \
	src/analysis/analysis_object.cc \
	src/analysis/analysis_object.h \
	src/analysis/analysis_type.cc \
	src/analysis/analysis_type.h \
	src/analysis/eigen_analysis.cc \
	src/analysis/eigen_analysis.h \
	src/analysis/sensitivity_static_analysis.cc \
	src/analysis/sensitivity_static_analysis.h \
	src/analysis/static_analysis.cc \
	src/analysis/static_analysis.h \
	src/analysis/transient_analysis.cc \
	src/analysis/transient_analysis.h \
	src/analysis/xfem_analysis.cc \
	src/analysis/xfem_analysis.h \
	src/constraints/constraint.cc \
	src/constraints/constraint.h \
	src/control/arc_length_spherical.cc \
	src/control/arc_length_spherical.h \
	src/control/arc_length_unp.cc \
	src/control/arc_length_unp.h \
	src/control/control.cc \
	src/control/control.h \
	src/control/displacement_control.cc \
	src/control/displacement_control.h \
	src/control/eigen_control.cc \
	src/control/eigen_control.h \
	src/control/load_control.cc \
	src/control/load_control.h \
	src/control/newmark.cc \
	src/control/newmark.h \
	src/control/sensitivity_control.cc \
	src/control/sensitivity_control.h \
	src/control/static_control.cc \
	src/control/static_control.h \
	src/control/transient_control.cc \
	src/control/transient_control.h \
	src/convergence/convergence_norm.cc \
	src/convergence/convergence_norm.h \
	src/crack/crack.cc \
	src/crack/crack.h \
	src/crosssection/cross_section.cc \
	src/crosssection/cross_section.h \
	src/database/database.cc \
	src/database/database.h \
	src/database/packet.cc \
	src/database/packet.h \
	src/database/sqlite_database.cc \
	src/database/sqlite_database.h \
	src/domain/domain.cc \
	src/domain/domain.h \
	src/domain/domain_object.cc \
	src/domain/domain_object.h \
	src/elements/bar2s.cc \
	src/elements/bar2s.h \
	src/elements/bar2t.cc \
	src/elements/bar2t.h \
	src/elements/bar.cc \
	src/elements/bar.h \
	src/elements/beam2e.cc \
	src/elements/beam2e.h \
	src/elements/brick8b.cc \
	src/elements/brick8b.h \
	src/elements/brick8.cc \
	src/elements/brick8d.cc \
	src/elements/brick8d.h \
	src/elements/brick8.h \
	src/elements/brick8i.cc \
	src/elements/brick8i.h \
	src/elements/element.cc \
	src/elements/element.h \
	src/elements/quad4b.cc \
	src/elements/quad4b.h \
	src/elements/quad4.cc \
	src/elements/quad4d.cc \
	src/elements/quad4d.h \
	src/elements/quad4_disp_axisymmetric.cc \
	src/elements/quad4_disp_axisymmetric.h \
	src/elements/quad4_disp_plain.cc \
	src/elements/quad4_disp_plain.h \
	src/elements/quad4e.cc \
	src/elements/quad4e.h \
	src/elements/quad4.h \
	src/elements/quad4i.cc \
	src/elements/quad4i.h \
	src/elements/sdof_element.cc \
	src/elements/sdof_element.h \
	src/elements/shape_functions.cc \
	src/elements/shape_functions.h \
	src/elements/spring.cc \
	src/elements/spring.h \
	src/elements/tetrahedron4_disp.cc \
	src/elements/tetrahedron4_disp.h \
	src/elements/timoshenko2d.cc \
	src/elements/timoshenko2d.h \
	src/elements/triangle3.cc \
	src/elements/triangle3.h \
	src/elements/triangle3_xfem.cc \
	src/elements/triangle3_xfem.h \
	src/elements/triangle6.cc \
	src/elements/triangle6.h \
	src/exception/sexception.cc \
	src/exception/sexception.h \
	src/feobject/fe_object.cc \
	src/feobject/fe_object.h \
	src/feobject/fe_object_tags.h \
	src/group/group.cc \
	src/group/group.h \
	src/imposer/elimination_imposer.cc \
	src/imposer/elimination_imposer.h \
	src/imposer/imposer.cc \
	src/imposer/imposer.h \
	src/imposer/lagrange_imposer.cc \
	src/imposer/lagrange_imposer.h \
	src/imposer/penalty_imposer.cc \
	src/imposer/penalty_imposer.h \
	src/loadcase/elemental_load.cc \
	src/loadcase/elemental_load.h \
	src/loadcase/element_sensitivity_parameter.cc \
	src/loadcase/element_sensitivity_parameter.h \
	src/loadcase/ground_motion_file.cc \
	src/loadcase/ground_motion_file.h \
	src/loadcase/ground_motion_sin.cc \
	src/loadcase/ground_motion_sin.h \
	src/loadcase/group_state.cc \
	src/loadcase/group_state.h \
	src/loadcase/initial_condition.cc \
	src/loadcase/initial_condition.h \
	src/loadcase/initial_displacement.cc \
	src/loadcase/initial_displacement.h \
	src/loadcase/initial_stresses.cc \
	src/loadcase/initial_stresses.h \
	src/loadcase/initial_velocity.cc \
	src/loadcase/initial_velocity.h \
	src/loadcase/loadcase.cc \
	src/loadcase/loadcase.h \
	src/loadcase/load.cc \
	src/loadcase/load.h \
	src/loadcase/nodal_load.cc \
	src/loadcase/nodal_load_constant.cc \
	src/loadcase/nodal_load_constant.h \
	src/loadcase/nodal_load.h \
	src/loadcase/nodal_load_linear.cc \
	src/loadcase/nodal_load_linear.h \
	src/loadcase/nodal_load_sin.cc \
	src/loadcase/nodal_load_sin.h \
	src/loadcase/uniaxial_load.cc \
	src/loadcase/uniaxial_load.h \
	src/main/nemesis_config.h \
	src/main/nemesis_debug.cc \
	src/main/nemesis_debug.h \
	src/material/creep.cc \
	src/material/creep.h \
	src/material/dp_in.cc \
	src/material/dp_in.h \
	src/material/dp_out.cc \
	src/material/dp_out.h \
	src/material/drucker_prager.cc \
	src/material/drucker_prager.h \
	src/material/drucker_prager_new2.cc \
	src/material/drucker_prager_new2.h \
	src/material/drucker_prager_new3.cc \
	src/material/drucker_prager_new3.h \
	src/material/drucker_prager_new.cc \
	src/material/drucker_prager_new.h \
	src/material/drucker_prager_ys.h \
	src/material/duncan_chang.cc \
	src/material/duncan_chang.h \
	src/material/evolution_law.cc \
	src/material/evolution_law.h \
	src/material/hardening.h \
	src/material/hoek_brown.cc \
	src/material/hoek_brown.h \
	src/material/lade_duncan.cc \
	src/material/lade_duncan.h \
	src/material/lade_duncan_surface.cc \
	src/material/lade_duncan_surface.h \
	src/material/linear_equivalent_el.cc \
	src/material/linear_equivalent_el.h \
	src/material/material.cc \
	src/material/material.h \
	src/material/matpoint.cc \
	src/material/matpoint.h \
	src/material/mc_0.cc \
	src/material/mc_0.h \
	src/material/mc_1.cc \
	src/material/mc_1.h \
	src/material/mc_2.cc \
	src/material/mc_2.h \
	src/material/mc.cc \
	src/material/mcc.cc \
	src/material/mcc.h \
	src/material/mc.h \
	src/material/modified_cam_clay.cc \
	src/material/modified_cam_clay.h \
	src/material/mohr_coulomb.cc \
	src/material/mohr_coulomb.h \
	src/material/multiaxial_elastic.cc \
	src/material/multiaxial_elastic.h \
	src/material/multiaxial_elastic_plastic.cc \
	src/material/multiaxial_elastic_plastic.h \
	src/material/multiaxial_material.cc \
	src/material/multiaxial_material.h \
	src/material/plane_stress.cc \
	src/material/plane_stress.h \
	src/material/sdof_material.cc \
	src/material/sdof_material.h \
	src/material/spring_contact.cc \
	src/material/spring_contact.h \
	src/material/spring_elastic.cc \
	src/material/spring_elastic.h \
	src/material/spring_material.cc \
	src/material/spring_material.h \
	src/material/surface.cc \
	src/material/surface.h \
	src/material/tc.cc \
	src/material/tc.h \
	src/material/tension_cutoff_ys.cc \
	src/material/tension_cutoff_ys.h \
	src/material/tresca.cc \
	src/material/tresca.h \
	src/material/uniaxial_cyclic.cc \
	src/material/uniaxial_cyclic.h \
	src/material/uniaxial_elastic.cc \
	src/material/uniaxial_elastic.h \
	src/material/uniaxial_elastic_plastic.cc \
	src/material/uniaxial_elastic_plastic.h \
	src/material/uniaxial_gap.cc \
	src/material/uniaxial_gap.h \
	src/material/uniaxial_material.cc \
	src/material/uniaxial_material.h \
	src/material/vm.cc \
	src/material/vm.h \
	src/material/von_mises.cc \
	src/material/von_mises.h \
	src/material/ys.cc \
	src/material/ys.h \
	src/model/elimination_model_element.cc \
	src/model/elimination_model_element.h \
	src/model/elimination_model_node.cc \
	src/model/elimination_model_node.h \
	src/model/lagrange_model_element.cc \
	src/model/lagrange_model_element.h \
	src/model/lagrange_model_node.cc \
	src/model/lagrange_model_node.h \
	src/model/model.cc \
	src/model/model_element.cc \
	src/model/model_element.h \
	src/model/model.h \
	src/model/model_node.cc \
	src/model/model_node.h \
	src/model/model_object.cc \
	src/model/model_object.h \
	src/model/penalty_model_element.cc \
	src/model/penalty_model_element.h \
	src/model/standard_model_element.cc \
	src/model/standard_model_element.h \
	src/model/standard_model_node.cc \
	src/model/standard_model_node.h \
	src/node/node.cc \
	src/node/node.h \
	src/parser/parser.cc \
	src/parser/parser.h \
	src/parser/py_parser.cc \
	src/parser/py_parser.h \
	src/reorderer/forward_cuthill_mckee.cc \
	src/reorderer/forward_cuthill_mckee.h \
	src/reorderer/forward_sloan.cc \
	src/reorderer/forward_sloan.h \
	src/reorderer/reorderer.cc \
	src/reorderer/reorderer.h \
	src/reorderer/reverse_cuthill_mckee.cc \
	src/reorderer/reverse_cuthill_mckee.h \
	src/reorderer/reverse_sloan.cc \
	src/reorderer/reverse_sloan.h \
	src/soe/band_linear_soe.cc \
	src/soe/band_linear_soe.h \
	src/soe/eigen_soe.cc \
	src/soe/eigen_soe.h \
	src/soe/full_linear_soe.cc \
	src/soe/full_linear_soe.h \
	src/soe/soe.cc \
	src/soe/soe.h \
	src/soe/symm_linear_soe.cc \
	src/soe/symm_linear_soe.h \
	src/tracker/tracker.cc \
	src/tracker/tracker.h

nemesis_LDFLAGS = \
	-L/usr/lib \
	-L/opt/acml4.4.0/gfortran64_mp/lib \
	-lpython2.6 \
	-lsqlite3 \
	-lacml_mp -lacml_mv \
	-lgfortran -lgomp -lrt -lm -rpath /opt/acml4.4.0/gfortran64_mp/lib
